# python-template

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .coveragerc  .editorconfig  .gitignore  LICENSE  README.md  noxfile.py  setup.cfg
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: main.py
