[metadata]
name = {{cookiecutter.package_name}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
version = attr: {{cookiecutter.package_name}}.__version__
url = {{cookiecutter.repo_url}}
description = 
    {{cookiecutter.package_description}}
long_description_content_type = text/markdown
long_description = file: README.md
keywords = {{cookiecutter.package_keywords}}
license = {{cookiecutter.license}}
classifiers =
{% if cookiecutter.license == 'GPLv3+' %}
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
{% elif cookiecutter.license == 'Apache 2.0' %}
    License :: OSI Approved :: Apache Software License
{% elif cookiecutter.license == 'MIT' %}
    License :: OSI Approved :: MIT License
{% elif cookiecutter.license == 'ISC' %}
    License :: OSI Approved :: ISC License (ISCL)
{% elif cookiecutter.license == 'BSD' %}
    License :: OSI Approved :: BSD License
{% else %}
    License :: Other/Proprietary License
{% endif %}
    Programming Language :: Python :: {{cookiecutter.python_version_major}} 
    Programming Language :: Python :: {{cookiecutter.python_version_major}}.{{cookiecutter.python_version_minor}}

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >={{cookiecutter.python_version_major}}.{{cookiecutter.python_version_minor}}
install_requires =

[options.entry_points]
console_scripts =
    {{cookiecutter.package_name}} = {{cookiecutter.package_name}}.main:main

[options.extras_require]
dev = 
    pdoc3
    flake8 
    twine 
    autopep8
    pytest

[flake8]
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .nox,
    .pytest_cache
max_complexity = 16
max_line_length = 100
ignore =
    E731
    E116
    E114
    E221
    E241
